--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: " Le vent se lève, il faut tenter de vivre. "
 ---
 
 {% for post in paginator.posts %}
